--- a/HAZI/HAZI11/HAZI11.ipynb
+++ b/HAZI/HAZI11/HAZI11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
     "Egy példa a kimenetre: train_images, train_labels, test_images, test_labels\n",
     "függvény neve: cifar100_data\n",
     "'''\n",
-    "def cifar100_data():\n",
+    "def cifar100_data() -> tuple[float, float, float, float]:\n",
     "    (train_images, train_labels), (test_images, test_labels) = tf.keras.datasets.cifar100.load_data()\n",
     "    train_images = train_images.astype('float32') / 255.0\n",
     "    test_images = test_images.astype('float32') / 255.0\n",
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x11ec8874410>"
+       "<keras.engine.sequential.Sequential at 0x25cc2c14b90>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
     "return type: keras.engine.sequential.Sequential\n",
     "függvény neve: cifar100_model\n",
     "'''\n",
-    "def cifar100_model():\n",
+    "def cifar100_model() -> tf.keras.Sequential:\n",
     "    model = tf.keras.Sequential([\n",
     "        tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3)),\n",
     "        tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
@@ -86,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x11ec8874410>"
+       "<keras.engine.sequential.Sequential at 0x25cc2c14b90>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
     "from keras.optimizers import Adam\n",
     "from keras.losses import SparseCategoricalCrossentropy\n",
     "\n",
-    "def model_compile(model):\n",
+    "def model_compile(model: tf.keras.Sequential) -> tf.keras.Sequential:\n",
     "    optimizer = Adam()\n",
     "    loss = SparseCategoricalCrossentropy(from_logits=False)\n",
     "    model.compile(optimizer=optimizer, loss=loss, metrics=['accuracy'])\n",
@@ -125,42 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "1563/1563 [==============================] - 127s 80ms/step - loss: 3.9395 - accuracy: 0.0990\n",
-      "Epoch 2/10\n",
-      "1563/1563 [==============================] - 128s 82ms/step - loss: 3.1782 - accuracy: 0.2303\n",
-      "Epoch 3/10\n",
-      "1563/1563 [==============================] - 119s 76ms/step - loss: 2.7807 - accuracy: 0.3046\n",
-      "Epoch 4/10\n",
-      "1563/1563 [==============================] - 121s 78ms/step - loss: 2.4801 - accuracy: 0.3639\n",
-      "Epoch 5/10\n",
-      "1563/1563 [==============================] - 120s 77ms/step - loss: 2.2393 - accuracy: 0.4142\n",
-      "Epoch 6/10\n",
-      "1563/1563 [==============================] - 119s 76ms/step - loss: 2.0135 - accuracy: 0.4613\n",
-      "Epoch 7/10\n",
-      "1563/1563 [==============================] - 124s 79ms/step - loss: 1.7834 - accuracy: 0.5138\n",
-      "Epoch 8/10\n",
-      "1563/1563 [==============================] - 128s 82ms/step - loss: 1.5604 - accuracy: 0.5660\n",
-      "Epoch 9/10\n",
-      "1563/1563 [==============================] - 121s 77ms/step - loss: 1.3389 - accuracy: 0.6199\n",
-      "Epoch 10/10\n",
-      "1563/1563 [==============================] - 120s 77ms/step - loss: 1.1311 - accuracy: 0.6706\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x11ec8874410>"
+       "'\\ndef model_fit( model : tf.keras.Sequential, epochs, train_images, train_labels ) -> tf.keras.Sequential :\\n    model.fit(train_images, train_labels, epochs=epochs)\\n    return model\\nmodel_fit(compiled_model, 10, train_images, train_labels)\\n'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,24 +148,26 @@
     "return type: keras.engine.sequential.Sequential\n",
     "függvény neve: model_fit\n",
     "'''\n",
+    "'''\n",
     "def model_fit( model : tf.keras.Sequential, epochs, train_images, train_labels ) -> tf.keras.Sequential :\n",
     "    model.fit(train_images, train_labels, epochs=epochs)\n",
     "    return model\n",
-    "model_fit(compiled_model, 10, train_images, train_labels)"
+    "model_fit(compiled_model, 10, train_images, train_labels)\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 - 5s - loss: 3.6309 - accuracy: 0.3247 - 5s/epoch - 15ms/step\n",
-      "Test accuracy: 0.3246999979019165\n",
-      "Test loss: 3.6308577060699463\n"
+      "313/313 - 7s - loss: 4.6061 - accuracy: 0.0113 - 7s/epoch - 22ms/step\n",
+      "Test accuracy: 0.011300000362098217\n",
+      "Test loss: 4.606054306030273\n"
      ]
     }
    ],
@@ -204,7 +180,7 @@
     "return type: float, float\n",
     "függvény neve: model_evaluate\n",
     "'''\n",
-    "def model_evaluate(model : tf.keras.Sequential, test_images, test_labels) :\n",
+    "def model_evaluate(model : tf.keras.Sequential, test_images, test_labels) -> tuple[float, float]:\n",
     "    test_loss, test_acc = model.evaluate(test_images, test_labels, verbose=2)\n",
     "    return test_loss, test_acc\n",
     "test_loss, test_acc = model_evaluate(model, test_images, test_labels)\n",
